# retail-demand-forecasting

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
api/: main.py
dashboard/: app.py  requirements.txt
dashboard/data/: dashboard_manifest.json  feature_importance.csv  fold_metrics.csv  forecast.parquet  model_comparison.csv  model_summary.csv  recent_actuals.parquet
docs/: backtesting_strategy.md  data_source.md  error_analysis.md  feature_availability.md  model_card.md  monitoring_plan.md  replenishment_assumptions.md
reports/data/: daily_sales_summary.csv  data_profile.json  data_profile_summary.md  family_sales_summary.csv  modeling_dataset_profile.json  promotion_sales_summary.csv  raw_data_manifest.csv  raw_data_validation.json
reports/modeling/: baseline_metrics_by_family.csv  baseline_metrics_by_fold.csv  baseline_summary.csv  final_forecast_by_date.csv  final_forecast_sample.csv  final_model_feature_importance.csv  final_model_metadata.json  model_comparison.csv  xgboost_backtest_config.json  xgboost_feature_importance.csv  xgboost_metrics_by_fold.csv  xgboost_summary.csv
scripts/: build_modeling_dataset.py  prepare_dashboard_data.py  profile_data.py  run_baseline_backtest.py  run_xgboost_backtest.py  train_final_model.py  verify_raw_data.py
src/retail_forecasting/: backtesting.py  baselines.py  features.py  (+3 more)
tests/: conftest.py  test_api.py  test_features.py  test_forecasting.py  test_modeling.py  test_replenishment.py
